--- a/about.html
+++ b/about.html
@@ -52,51 +52,51 @@
           <div class="directors_card">
             <img
               class="director_card_img"
-              src="./img/about_oval.svg"
+              src="./img/directors_img.svg"
               alt="pic"
             />
-            <h3 class="directors_card_name">Nikita Marks</h3>
-            <p class="directors_card_position">Founder & CEO</p>
+            <h3 class="directors_card_name">Cristian Duncan</h3>
+            <p class="directors_card_position">Co-founder & COO</p>
           </div>
 
           <div class="directors_card">
             <img
               class="director_card_img"
-              src="./img/about_oval.svg"
+              src="./img/directors_img.1.svg"
               alt="pic"
             />
-            <h3 class="directors_card_name">Nikita Marks</h3>
-            <p class="directors_card_position">Founder & CEO</p>
+            <h3 class="directors_card_name">Cruz Hamer</h3>
+            <p class="directors_card_position">Co-founder & CTO</p>
           </div>
 
           <div class="directors_card">
             <img
               class="director_card_img"
-              src="./img/about_oval.svg"
+              src="./img/directors_img.2.svg"
               alt="pic"
             />
-            <h3 class="directors_card_name">Nikita Marks</h3>
-            <p class="directors_card_position">Founder & CEO</p>
+            <h3 class="directors_card_name">Drake Heaton</h3>
+            <p class="directors_card_position">Business Development Lead</p>
           </div>
 
           <div class="directors_card">
             <img
               class="director_card_img"
-              src="./img/about_oval.svg"
+              src="./img/directors_img.3.svg"
               alt="pic"
             />
-            <h3 class="directors_card_name">Nikita Marks</h3>
-            <p class="directors_card_position">Founder & CEO</p>
+            <h3 class="directors_card_name">Griffin Wise</h3>
+            <p class="directors_card_position">Lead Marketing</p>
           </div>
 
           <div class="directors_card">
             <img
               class="director_card_img"
-              src="./img/about_oval.svg"
+              src="./img/directors_img.4.svg"
               alt="pic"
             />
-            <h3 class="directors_card_name">Nikita Marks</h3>
-            <p class="directors_card_position">Founder & CEO</p>
+            <h3 class="directors_card_name">Aden Allan</h3>
+            <p class="directors_card_position">Head of Talent</p>
           </div>
         </div>
       </section>
