--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,11 @@
           <h2 class="main_text">Ask us about</h2>
 
           <div class="main_info">
-            <p class="main_info_item">The quality of our talent network</p>
-            <p class="main_info_item">The quality of our talent network</p>
-            <p class="main_info_item">The quality of our talent network</p>
+            <p class="main_info_item_one">The quality of our talent network</p>
+            <p class="main_info_item_two">
+              Usage & implementation of our software
+            </p>
+            <p class="main_info_item_thri">How we help drive innovation</p>
           </div>
         </div>
         <div class="main_input">
