--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             </li>
 
             <li class="build_infos">
-              <img src="./img/Group 11.svg" alt="pic" />
+              <img src="./img/build_info_img.svg" alt="pic" />
 
               <div class="build_info">
-                <h2 class="build_info_title">Experienced Individuals</h2>
+                <h2 class="build_info_title">Easy to Implement</h2>
                 <p class="build_info_text">
-                  Our network is made up of highly experienced professionals who
-                  are passionate about what they do.
+                  Our processes have been refined over years of implementation
+                  meaning our teams always deliver.
                 </p>
               </div>
             </li>
 
             <li class="build_infos">
-              <img src="./img/Group 11.svg" alt="pic" />
+              <img src="./img/build_info_img.2.svg" alt="pic" />
 
               <div class="build_info">
-                <h2 class="build_info_title">Experienced Individuals</h2>
+                <h2 class="build_info_title">Enhanced Productivity</h2>
                 <p class="build_info_text">
-                  Our network is made up of highly experienced professionals who
-                  are passionate about what they do.
+                  Our customized platform with in-built analytics helps you
+                  manage your distributed teams.
                 </p>
               </div>
             </li>
@@ -167,10 +167,13 @@
         </p>
 
         <div class="footer_media">
-          <img class="footer_media_item" src="./img/footer_media.svg" alt="media" />
+          <img
+            class="footer_media_item"
+            src="./img/footer_media.svg"
+            alt="media"
+          />
           <p class="footer_media_text">Copyright 2020. All Rights Reserved</p>
         </div>
-
       </div>
     </footer>
   </body>
